--- a/firebase.json
+++ b/firebase.json
@@ -7,7 +7,8 @@
     "predeploy": [
       "npm --prefix \"$RESOURCE_DIR\" run lint",
       "npm --prefix \"$RESOURCE_DIR\" run build"
-    ]
+    ],
+    "source": "functions"
   },
   "hosting": {
     "public": "public",
@@ -48,5 +49,8 @@
   },
   "remoteconfig": {
     "template": "remoteconfig.template.json"
+  },
+  "storage": {
+    "rules": "storage.rules"
   }
 }
