--- a/functions/package.json
+++ b/functions/package.json
@@ -2,8 +2,8 @@
   "name": "functions",
   "scripts": {
     "lint": "eslint --ext .js,.ts .",
-    "build": "tsc",
-    "serve": "npm run build && firebase emulators:start --only functions",
+    "build": "npm run lint && tsc",
+    "serve": "npm run build -- --watch | firebase emulators:start",
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
@@ -18,13 +18,15 @@
     "firebase-functions": "^3.14.1"
   },
   "devDependencies": {
+    "@types/uuid": "^8.3.3",
     "@typescript-eslint/eslint-plugin": "^3.9.1",
     "@typescript-eslint/parser": "^3.8.0",
     "eslint": "^7.6.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.22.0",
     "firebase-functions-test": "^0.2.0",
-    "typescript": "^3.8.0"
+    "typescript": "^3.8.0",
+    "uuid": "^8.3.2"
   },
   "private": true
 }
