--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -6,10 +6,11 @@
     "outDir": "lib",
     "sourceMap": true,
     "strict": true,
-    "target": "es2017"
+    "target": "es2017",
+    "allowJs": true
   },
   "compileOnSave": true,
   "include": [
     "src"
-  ]
+  ],
 }
