--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -7,7 +7,7 @@
     "sourceMap": true,
     "strict": true,
     "target": "es2017",
-    "allowJs": true
+    "allowJs": true,
   },
   "compileOnSave": true,
   "include": [
